solutio place added

--- a/index.html
+++ b/index.html
@@ -270,58 +270,35 @@
           <div class="row">
                <div class="container">
                     <div class="col-md-12 col-sm-12 offset-content-below text-align-center">
-                         <h2 >GDZIE PRZYJMUJĘ</h2>
+                         <h2>GDZIE PRZYJMUJĘ</h2>
                     </div>
                     <div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
                               <div class="opening-hours">
-                                   <h4>Centrum Zdrowia Psychicznego Feniks</h4>
-                                   <p><b>Katowice</b>, ul. Witosa 21</p>
+                                   <h4>Gabinet psychologiczny Solutio</h4>
+                                   <p><b>Katowice</b>, ul. Mickiewicza 21</p>
                               </div>
-                              <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
-                                   <img class="places-map" src="images/Map_Feniks.png" alt="Dojazd Feniks"/>
+                              <a target="_blank" href="https://www.google.com/maps/place/Mickiewicza+21,+40-085+Katowice/@50.2626069,19.0133727,17z/">
+                                   <img class="places-map" src="images/Map_Solutio.jpg" alt="Dojazd Solutio"/>
                               </a>
-                              <div class="arrival-description">
-                                   <p><b>Dojazd autobusem:</b>
-                                        <br>
-                                        - przystanek Osiedle Witosa Centrum – numery: 51, 70, 109, 115, 130, 138, 165, 177, 193, 900
-                                        <br>
-                                        - przystanek Osiedle Witosa Droga Kochłowicka – numery: 70, 115, 120, 130, 138, 165, 177, 193, 632, 880, 900,
-                                   </p>
-                                   <p><b>Dojazd samochodem:</b><br>
-                                        Gabinet jest w odległości 400m od zjazdu z autostrady A4. Należy zjechać w zjazd „Załęska Hałda Os. Witosa”. CZP Feniks znajduje się po prawej stronie drogi, zaraz za budynkiem Szkoły Podstawowej.
-                                   </p>
-                              </div>
-                         </div>
-                    </div>
-                    <!--<div class="col-md-6 col-sm-6">
-                         <div class="footer-thumb">
-                              <div class="opening-hours">
-                                   <h4>Centrum Psychologiczne PozaCzasem</h4>
-                                   <p><b>Katowice</b>, ul. św Jana 11</p>
-                              </div>
-                              <a target="_blank" href="https://www.google.com/maps/place/Centrum+Psychologiczne+Pozaczasem/@50.2580939,19.0191722,17z/data=!3m1!4b1!4m5!3m4!1s0x4716ce4818d17005:0x49f340d7ac02e511!8m2!3d50.2580939!4d19.0213609">
-                                   <img class="places-map" src="images/Map_PozaCzasem.png" alt="Dojazd PozaCzasem"/>
-                              </a>
-                              <div class="arrival-description">
+                              <!--<div class="arrival-description">
                                    <p><b>Dojazd tramwajem:</b><br>
                                         - przystanek Katowice Św. Jana – numery: 6, 14, 16, 19, 23, 36
                                         <br>
                                         - przystanek Katowice Rynek/Teatr Śląski – numery: 0, 6, 7, 13, 14, 15, 16, 20, 23, 36, 40, 43
                                    </p>
                                    <p><b>Dojazd autobusem:</b><br>
-                                   Gabinet znajduje się w odległości 400m od budynku Dworca PKP/Galerii Katowickiej w&nbspKatowicach, z którego odjeżdża
+                                        Gabinet znajduje się w odległości 400m od budynku Dworca PKP/Galerii Katowickiej w&nbspKatowicach, z którego odjeżdża
                                         większość linii autobusowych.
-                                   - przystanek Katowice Dworzec – numery: 0, 9, 10, 12, 37, 46, 48, 50, 51, 61, 110, 115, 193,
+                                        - przystanek Katowice Dworzec – numery: 0, 9, 10, 12, 37, 46, 48, 50, 51, 61, 110, 115, 193,
                                         297, 600, 632, 672, 674, 689, 840, 910, 911, 930, 940, 950
                                    </p>
                                    <p><b>Dojazd samochodem:</b><br>
-                                   Warto skorzystać z parkingu w Galerii Katowickiej, która znajduje się w odległości 400m od gabinetu.
+                                        Warto skorzystać z parkingu w Galerii Katowickiej, która znajduje się w odległości 400m od gabinetu.
                                         Można tam bezpłatnie parkować przez 2h.
                                    </p>
-                              </div>
+                              </div>-->
                          </div>
-                    </div>-->
                     </div>
                </div>
           </div>
