add link to Solutio

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
                               <div class="opening-hours">
-                                   <h4>Gabinet psychologiczny Solutio</h4>
+                                   <h4><a href="https://pracowniasolutio.pl/">Gabinet psychologiczny Solutio</a></h4>
                                    <p><b>Katowice</b>, ul. Mickiewicza 21</p>
                               </div>
                               <a target="_blank" href="https://www.google.com/maps/place/Mickiewicza+21,+40-085+Katowice/@50.2626069,19.0133727,17z/">
