--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                          <div class="price-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Konsultacje psychologiczne</a></h3>
-                                   <p>130-150 zł / 50 min</p>
+                                   <p>180-220 zł / 50 min</p>
                               </div>
                          </div>
                     </div>
@@ -227,7 +227,7 @@
                          <div class="price-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
-                                   <p>130-150 zł / 50 min</p>
+                                   <p>180 zł / 50 min</p>
                               </div>
                          </div>
                     </div>
@@ -235,7 +235,7 @@
                          <div class="price-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Psychoterapia indywidualna</a></h3>
-                                   <p>130-150 zł / 50 min</p>
+                                   <p>180 zł / 50 min</p>
                               </div>
                          </div>
                     </div>
